--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="slide"><span class="promo-icon">🔒</span><div><div class="promo-title">Secure</div><div class="promo-desc">Child & pet friendly mesh</div></div></div>
         <div class="slide"><span class="promo-icon">☎️</span><div><div class="promo-title">Call Now</div><div class="promo-desc">(+91) 9483037385 </div></div></div>
       </div>
-      <div class="slider-nav">
+      <div class="slider-nav">y Hy
         <button id="promo-prev" class="slider-arrow">←</button>
         <button id="promo-next" class="slider-arrow">→</button>
       </div>
@@ -313,16 +313,16 @@
     <section class="slider-section">
       <h2 class="section-title">Latest Promotions</h2>
       <div class="slider shadow" id="ad-slider">
-        <div class="ad-slide"><img src="assets/images/07ec6648b183db7bcc914c5d36b95700.jpg" alt="" class="ad-img"><span class="ad-caption">Gold Series Nets</span></div>
-        <div class="ad-slide"><img src="assets/images/19f427872ebbd71bb920198bc336a4bb.jpg" alt="" class="ad-img"><span class="ad-caption">Silver Savings</span></div>
-        <div class="ad-slide"><img src="assets/images/340a61c8a5b20b86a1cc9673ec325f4a.jpg" alt="" class="ad-img"><span class="ad-caption">Bronze Budget</span></div>
-        <div class="ad-slide"><img src="assets/images/41b84a984e5ce0ca543e2c7a7f0175cb.jpg" alt="" class="ad-img"><span class="ad-caption">Free Fitting</span></div>
-        <div class="ad-slide"><img src="assets/images/340a61c8a5b20b86a1cc9673ec325f4a.jpg" alt="" class="ad-img"><span class="ad-caption">Monsoon Ready</span></div>
-        <div class="ad-slide"><img src="assets/images/ad6.jpg" alt="" class="ad-img"><span class="ad-caption">Easy Clean Mesh</span></div>
-        <div class="ad-slide"><img src="assets/images/ad7.jpg" alt="" class="ad-img"><span class="ad-caption">Refer & Earn</span></div>
-        <div class="ad-slide"><img src="assets/images/ad8.jpg" alt="" class="ad-img"><span class="ad-caption">Door Nets</span></div>
-        <div class="ad-slide"><img src="assets/images/ad9.jpg" alt="" class="ad-img"><span class="ad-caption">Child Safe</span></div>
-        <div class="ad-slide"><img src="assets/images/ad10.jpg" alt="" class="ad-img"><span class="ad-caption">Bulk Discount</span></div>
+        <div class="ad-slide"><img src="assets/images/2daff9b221a0ee4a093bf4de43b50d97.jpg" alt="" class="ad-img"><span class="ad-caption">Gold Series Nets</span></div>
+        <div class="ad-slide"><img src="assets/images/5efe6e54fd42e7cd15bc8b7ddc7cf6c6.jpg" alt="" class="ad-img"><span class="ad-caption">Silver Savings</span></div>
+        <div class="ad-slide"><img src="assets/images/67b8dbd660bcb59da84a147192c15d91.jpg" alt="" class="ad-img"><span class="ad-caption">Bronze Budget</span></div>
+        <div class="ad-slide"><img src="assets/images/b5dde7ca413bcc1a612198a44e9c8b54.jpg" alt="" class="ad-img"><span class="ad-caption">Free Fitting</span></div>
+        <div class="ad-slide"><img src="assets/images/c9bfd1c686275b446b3eb44ef2c6a769.jpg" alt="" class="ad-img"><span class="ad-caption">Monsoon Ready</span></div>
+        <div class="ad-slide"><img src="assets/images/372b8d016bde852b36bbf66be89b84e1.jpg" alt="" class="ad-img"><span class="ad-caption">Easy Clean Mesh</span></div>
+        <div class="ad-slide"><img src="assets/images/67b8dbd660bcb59da84a147192c15d91.jpg" alt="" class="ad-img"><span class="ad-caption">Refer & Earn</span></div>
+        <div class="ad-slide"><img src="assets/images/5efe6e54fd42e7cd15bc8b7ddc7cf6c6.jpg" alt="" class="ad-img"><span class="ad-caption">Door Nets</span></div>
+        <div class="ad-slide"><img src="assets/images/7a362148ba718ec532e63b64cb492f1b.jpg" alt="" class="ad-img"><span class="ad-caption">Child Safe</span></div>
+        <div class="ad-slide"><img src="assets/images/2daff9b221a0ee4a093bf4de43b50d97.jpg" alt="" class="ad-img"><span class="ad-caption">Bulk Discount</span></div>
       </div>
       <div class="slider-nav">
         <button id="ad-prev" class="slider-arrow">←</button>
