--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     .slider-nav { text-align: right; margin: 0.3em 1em;}
     .slider-arrow { background: var(--secondary); border: none; border-radius: 50%; width: 33px; height: 33px; margin: 0 0.15em; font-size: 1.2em; color: var(--primary);}
     .section-title { color: var(--dark-yellow); font-weight: 700; margin: 0.5em 0 0.1em 0; font-size: 1.18em;}
-    .ad-img {width: 100%; height: 100px; object-fit: cover; border-radius:8px;}
+    .ad-img {width: 100%; height: 200px; object-fit: cover; border-radius:8px;}
     .ad-caption, .product-title { font-size: 1.05em; font-weight: 700; color: var(--secondary);}
     .product-img {width: 86px; height: 86px; object-fit: contain; border-radius: 10px; background: var(--white);}
     .product-desc { color: #cbe7fa; font-size: 0.96em;}
@@ -231,6 +231,7 @@
   <header class="mobile-header">
     <div class="header-row">
       <div class="brand-name">Raj Marketing</div>
+      <div class="brand-number">+91 9483037385</div>
       <div class="header-actions">
         <a href="assets/pages/login.html" class="icon-btn" title="Customer Login"><span>👤</span></a>
         <button id="menu-btn" class="icon-btn" title="Menu"><span class="icon-menu">≡</span></button>
@@ -275,7 +276,7 @@
         <div class="slide"><span class="promo-icon">🔒</span><div><div class="promo-title">Secure</div><div class="promo-desc">Child & pet friendly mesh</div></div></div>
         <div class="slide"><span class="promo-icon">☎️</span><div><div class="promo-title">Call Now</div><div class="promo-desc">(+91) 9483037385 </div></div></div>
       </div>
-      <div class="slider-nav">y Hy
+      <div class="slider-nav">
         <button id="promo-prev" class="slider-arrow">←</button>
         <button id="promo-next" class="slider-arrow">→</button>
       </div>
